<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProdutos"
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/produtos" />

        <TextView
            android:id="@+id/textViewQuantidade"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quantidade" />

        <TextView
            android:id="@+id/textViewValor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textViewValue" />
    </LinearLayout>
</LinearLayout>