<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/textViewValue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewDate"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewStore" />
</LinearLayout>